# crewai_langserve_api

./: .env  .gitignore  README.md  crewai.py  pyproject.toml
app/: crewaiapp.py  server.py
